--- a/package.json
+++ b/package.json
@@ -12,17 +12,41 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "axios": "^0.21.1",
+    "babel-preset-es2015": "^6.24.1",
+    "date-fns": "^2.0.0-beta.5",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-day-picker": "^7.4.8",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.8",
     "@babel/preset-react": "^7.12.13",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.1.1",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
+    "mini-css-extract-plugin": "^1.3.9",
+    "node-sass": "^5.0.0",
+    "redux-devtools": "^3.7.0",
+    "sass-loader": "^11.0.1",
     "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
