--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "node-sass": "^5.0.0",
     "redux-devtools": "^3.7.0",
     "sass-loader": "^11.0.1",
+    "svg-url-loader": "^7.1.1",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
