--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ],
-    "plugins": [
-      "react-hot-loader/babel"
-    ]
-  }
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react",
+  ],
+  "plugins": [
+    "react-hot-loader/babel",
+  ]
+}
