--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "dependencies": {
     "@babel/register": "^7.13.8",
     "@date-io/date-fns": "^1.3.13",
+    "asset-require-hook": "^1.2.0",
     "axios": "^0.21.1",
     "babel-preset-es2015": "^6.24.1",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "file-loader": "5.1.0",
     "history": "^5.0.0",
+    "ignore-styles": "^5.0.1",
     "moment": "^2.29.1",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
@@ -31,15 +34,17 @@
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
+    "react-svg-loader": "^3.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^5.0.0",
-    "webpack": "^5.24.2"
+    "svg-url-loader": "^7.1.1",
+    "webpack": "5.24.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
-    "@babel/preset-env": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
     "@babel/preset-react": "^7.12.13",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -49,13 +54,13 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
+    "file-loader": "5.1.0",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
     "redux-devtools": "^3.7.0",
     "sass-loader": "^11.0.1",
-    "svg-url-loader": "^7.1.1",
     "webpack-cli": "^4.5.0",
     "webpack-dev-middleware": "^4.1.0",
     "webpack-dev-server": "^3.11.2",
