--- a/package.json
+++ b/package.json
@@ -12,58 +12,56 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/register": "^7.13.8",
+    "@babel/register": "^7.8.3",
     "@date-io/date-fns": "^1.3.13",
     "asset-require-hook": "^1.2.0",
     "axios": "^0.21.1",
+    "babel-eslint": "^10.0.3",
     "babel-preset-es2015": "^6.24.1",
+    "classnames": "^2.2.6",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.0",
     "express": "^4.17.1",
-    "file-loader": "5.1.0",
     "helmet": "^3.21.2",
-    "history": "^5.0.0",
+    "history": "^4.10.1",
     "ignore-styles": "^5.0.1",
+    "md5": "^2.2.1",
     "moment": "^2.29.1",
-    "nodemon": "^2.0.7",
-    "react": "^17.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
     "react-day-picker": "^7.4.8",
-    "react-dom": "^17.0.1",
-    "react-hot-loader": "^4.13.0",
-    "react-redux": "^7.2.2",
-    "react-router": "^5.2.0",
+    "react-dom": "^16.12.0",
+    "react-hot-loader": "^4.12.19",
+    "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.1.2",
     "react-svg-loader": "^3.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "stylus": "^0.54.8",
-    "stylus-loader": "^5.0.0",
-    "svg-url-loader": "^7.1.1",
-    "webpack": "5.24.3"
+    "terser-webpack-plugin": "^2.3.3",
+    "webpack": "^4.41.5",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/preset-env": "^7.13.9",
-    "@babel/preset-react": "^7.12.13",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.1.1",
-    "eslint": "^7.21.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "file-loader": "5.1.0",
-    "html-loader": "^2.1.1",
-    "html-webpack-plugin": "^5.2.0",
-    "mini-css-extract-plugin": "^1.3.9",
-    "node-sass": "^5.0.0",
-    "redux-devtools": "^3.7.0",
-    "sass-loader": "^11.0.1",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-middleware": "^4.1.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "compression-webpack-plugin": "^3.1.0",
+    "css-loader": "^3.4.2",
+    "file-loader": "^4.3.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.13.1",
+    "nodemon": "^2.0.2",
+    "sass-loader": "^7.3.1",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   }
 }
