--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "sass-loader": "^7.3.1",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
+  },
+  "engines": {
+    "node": "10.23.1"
   }
 }
