config: heroku package

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack-cli --config webpack.config.js",
     "start:dev": "nodemon src/server/index",
-    "start": "node src/server"
+    "start": "node src/server",
+    "heroku-postbuild": "ng build --prod" 
   },
   "keywords": [],
   "author": "",
