--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "webpack-cli --config webpack.config.js",
     "start:dev": "nodemon src/server/index",
     "start": "node src/server",
-    "postinstall": "ng build" 
+    "postinstall": "ng build",
+    "cypress": "cypress run --spec 'cypress/integration/flyapp-flow.js'"
+
   },
   "keywords": [],
   "author": "",
@@ -58,6 +60,7 @@
     "babel-loader": "^8.0.6",
     "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^3.4.2",
+    "cypress": "^6.6.0",
     "file-loader": "^4.3.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.13.1",
