--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack-cli --config webpack.config.js",
-    "start:dev": "nodemon src/server/index",
     "start": "node src/server",
-    "postinstall": "ng build" 
+    "heroku-prebuild": "npm install --dev",
+    "heroku-postbuild": "npm run build;"
   },
   "keywords": [],
   "author": "",
@@ -49,11 +49,11 @@
     "terser-webpack-plugin": "^2.3.3",
     "webpack": "^4.41.5",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "@babel/preset-env": "^7.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "compression-webpack-plugin": "^3.1.0",
