--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flyApp",
+  "name": "fly-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack-cli --config webpack.config.js",
     "start": "node src/server",
-    "cypress": "cypress run --spec 'cypress/integration/flyapp-flow.js'"
+    "cypress": "cypress run --spec 'cypress/integration/flyapp-flow.js'",
     "heroku-prebuild": "npm install --dev",
     "heroku-postbuild": "npm run build;"
   },
