--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack-cli --config webpack.config.js",
     "start": "node src/server",
-    "cypress": "cypress run --spec 'cypress/integration/flyapp-flow.js'",
     "heroku-prebuild": "npm install --dev",
-    "heroku-postbuild": "npm run build;"
+    "heroku-postbuild": "npm run build",
+    "cypress": "cypress run --spec 'cypress/integration/flyapp-flow.js'",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "lint": "eslint src/",
+    "lint:fix" : "eslint --fix . --ext .js src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.8.3",
     "@babel/register": "^7.8.3",
     "@date-io/date-fns": "^1.3.13",
     "asset-require-hook": "^1.2.0",
@@ -33,6 +37,7 @@
     "helmet": "^3.21.2",
     "history": "^4.10.1",
     "ignore-styles": "^5.0.1",
+    "jest": "^26.6.3",
     "md5": "^2.2.1",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
@@ -50,8 +55,7 @@
     "terser-webpack-plugin": "^2.3.3",
     "webpack": "^4.41.5",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0",
-    "@babel/preset-env": "^7.8.3"
+    "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
