--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "heroku-prebuild": "npm install --dev",
     "heroku-postbuild": "npm run build",
     "cypress": "cypress run --spec 'cypress/integration/flyapp-flow.js'",
-    "test": "jest",
+    "test": "jest --coverage",
     "test:watch": "jest --watch",
     "lint": "eslint src/",
-    "lint:fix" : "eslint --fix . --ext .js src"
+    "lint:fix": "eslint --fix . --ext .js src"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,7 @@
     "babel-eslint": "^10.0.3",
     "babel-preset-es2015": "^6.24.1",
     "classnames": "^2.2.6",
+    "create-react-class": "^15.7.0",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
@@ -37,7 +38,6 @@
     "helmet": "^3.21.2",
     "history": "^4.10.1",
     "ignore-styles": "^5.0.1",
-    "jest": "^26.6.3",
     "md5": "^2.2.1",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
@@ -64,15 +64,28 @@
     "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^3.4.2",
     "cypress": "^6.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "file-loader": "^4.3.0",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.13.1",
     "nodemon": "^2.0.2",
+    "react-test-renderer": "^16.14.0",
     "sass-loader": "^7.3.1",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
   },
   "engines": {
     "node": "10.23.1"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/frontend/__test__/setup.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(scss|css)$": "<rootDir>/src/frontend/__mocks__/styleMock.js",
+      "^.+\\.svg$": "<rootDir>/src/frontend/__mocks__/svgMock.js"
+    }
   }
 }
